<resources>
    <string name="app_name">Smart Garden</string>
    <string name="title_welcome_page">Welcome</string>
    <string name="title_welcome_page1">Smart Plant Care Assistant</string>
    <string name="login">LOGIN</string>
    <string name="signup">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Log In</string>
    <string name="inputEmail">masukkan email Anda</string>
    <string name="inputPassword">masukkan password Anda</string>
    <string name="username">Username</string>
    <string name="inputUsername">masukkan username Anda</string>
    <string name="tittle_splash_page">Healthy Plants \n Beautiful Environment</string>
    <string name="tittle_splash_page1">Have a nice day!</string>
    <string name="title_home">Welcome\nBangkit !</string>
    <string name="search">Search</string>
    <string name="humadity">Humadity</string>
    <string name="humadity_percent">Percent</string>
    <string name="temp">Temperature</string>
    <string name="temp_celcius">20 C</string>
    <string name="water_level">Water Level</string>
    <string name="water_percent">Percent</string>
    <string name="camera_card">Take Photos\nof Your Plants</string>
    <string name="community_card">Ask the Community</string>
    <string name="plant_card">My Plants</string>
    <string name="set_humadity">Set Humadity</string>
    <string name="Number">Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="myplant">MyPlant</string>
    <string name="MyPlant">MyPlant</string>
    <string name="Community">Comunity</string>
    <string name="foto">Foto</string>
    <string name="Galeri">Galeri</string>
    <string name="Camera">Camera</string>
    <string name="Scan">Scan</string>
    <string name="tv_plant_name">Plant Name</string>
    <string name="tv_place_plant">Di dalam Ruangan</string>
    <string name="tv_water_plant">2 Sekali Sehari</string>
    <string name="tv_date_plant">Ditambahkan, 03 Desember 2023</string>
    <string name="nama_tanaman">Nama Tanaman :</string>
    <string name="tv_name_plant">Monstera alias Janda Bolong</string>
    <string name="tv_detail_name_plant">Merupakan jenis tanaman hias tropis yang sering digunakan sebagai hiasan interior rumah bergaya Skandinavia atau minimalis. \nKeunikan tanaman ini adalah memiliki daun mengilap lebar berwarna hijau pekat berpola seperti bentuk hati.</string>
    <string name="saran_perawatan">Saran Perawatan</string>
    <string name="tv_detail_saran">Tips perawatan yang dapat Anda ikuti: \n1. Pencahayaan: \n\t- Janda bolong menyukai sinar matahari yang terang, namun hindari paparan langsung sinar matahari yang terik, terutama sinar matahari tengah hari.\n\t- Tempatkan tanaman di tempat yang mendapatkan cahaya indirek atau sebagian teduh.</string>
    <string name="scan_button">Scan Button</string>
    <string name="tv_user">Bangkit</string>
    <string name="tv_title">Bagaimana Cara Mengatasinya?</string>
    <string name="tv_user_community">User</string>
    <string name="tv_title_community">Bagaimana Cara Mengatasinya?</string>
    <string name="tv_desc_community">Daun Mengering dan Kuning</string>
    <string name="change_profile">Change Profile</string>
    <string name="save">Save</string>
    <string name="add_button">Add Button</string>

    <string-array name="data_title_community">
        <item>Bagaimana Cara Mengatasinya?</item>
        <item>Dimana saya bisa mendapatkan tanaman ini?</item>
        <item>Rawat murah hasil mahal</item>
        <item>Kenapa tanaman mangga saya susah berbuah?</item>
        <item>Tanaman penghasil uang</item>
    </string-array>

    <string-array name="data_desc_community">
        <item>Daun Mengering dan kuning</item>
        <item>Saya ingin memiliki tanaman ini, karena di wilayah saya tidak terdapat tanaman tersebut.</item>
        <item>Saya memiliki tanaman yang mudah untuk dirawat dan bisa menghasilkan uang dari merawat tanaman ini.</item>
        <item>Tanaman mangga saya susah berbuah, saya tinggal di daerah Sulawesi Tenggara yang umumnya tanah subur.</item>
        <item>Tanaman ini memiliki nilai yang mahal apabila dijual, karena banyak dikonsumsi orang.</item>
    </string-array>

    <integer-array name="data_photo_community">
        <item>@drawable/daun_kuning</item>
        <item>@drawable/kantong_semar</item>
        <item>@drawable/bayam</item>
        <item>@drawable/pohon_mangga</item>
        <item>@drawable/daun_bawang</item>

    </integer-array>
</resources>