<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_home"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="665dp"
        android:layout_height="248dp"
        android:textDirection="firstStrong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:srcCompat="@drawable/pohon" />


    <androidx.cardview.widget.CardView
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginBottom="88dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/tv"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.816">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/user" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">



        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/jacques_francois"
        android:text="@string/title_home"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_humadity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shadow_bg"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/humadity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/humadity"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/humadity_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/humadity" />

        <TextView
            android:id="@+id/percent_humadity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="66dp"
            android:text="@string/humadity_percent"
            android:textSize="13sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_community"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_selector"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_humadity">

        <ImageView
            android:id="@+id/community_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/community" />

        <TextView
            android:id="@+id/community_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/community_card"
            android:textSize="13sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_camera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_selector"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/card_plant"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_community">

        <ImageView
            android:id="@+id/camera_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/camera_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/camera_card"
            android:textSize="13sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_plant"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_selector"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_community">

        <ImageView
            android:id="@+id/plant_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/plant" />

        <TextView
            android:id="@+id/plant_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/plant_card"
            android:textSize="13sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_temp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/card_humadity"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/temp"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/temperature_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/temp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="66dp"
            android:text="@string/temp_celcius"
            android:textSize="13sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
